# tant

./: .cs  Makefile  numerologAllaBot - Ярлык.lnk  numerolog_dump.sql  requirements-dev.txt  tant_dump.sql  test.py
analytics2.0/: Dockerfile  Readme.MD  entrypoint.sh  pyproject.toml
analytics2.0/client/: dialogs.json  test.py  test_message_history.py
analytics2.0/client/data/: config.py
analytics2.0/frontend/: .env.dist  Dockerfile  package-lock.json  package.json  webpack.config.js
analytics2.0/frontend/public/: index.html  manifest.json
analytics2.0/frontend/src/: App.js  index.js
analytics2.0/frontend/src/helpers/: is_authenticated.js
analytics2.0/frontend/src/http/: index.js
analytics2.0/frontend/src/store/: index.js
analytics2.0/media/: .gitignore
analytics2.0/migrations/versions/: 1ea72117c880_update_wbot.py  8f27fa5c61a0_update_botuser.py  951d0f1d333d_first_commit.py  9ca2fa4822e4_update_botuser.py  f2e9fb3cbf6c_update_user.py  f606194b6414_create_models.py
analytics2.0/panel/: .env.dist  requirements.txt
analytics2.0/panel/data/: config.py
analytics2.0/panel/handlers/admin/: menu.py
analytics2.0/src/: application.py  schemas.py
analytics2.0/src/data/: config.py
analytics2.0/src/database/: models.py
analytics2.0/src/middlewares/: auth.py
analytics2.0/src/routers/: admin.py  analytics.py  auth.py  bot_requests.py  bots.py  info.py  matrix_requests.py  messages.py  tgusers.py  users.py  worker_bots.py  worker_requests.py  workers.py
analytics2.0/src/utils/: files.py  tokenizator.py
analytics2.0/templates/: analytics.html
(+305 files in other folders)
